z-index bug fixed

--- a/src/app/styles/task.module.scss
+++ b/src/app/styles/task.module.scss
@@ -5,7 +5,6 @@
   padding: 1rem;
   border: 2px dashed #d7dde9;
   border-radius: 8px;
-  z-index: 0;
 
   input {
     display: none;
